--- a/WPF graded exercise/MainWindow.xaml
+++ b/WPF graded exercise/MainWindow.xaml
@@ -43,12 +43,12 @@
                 <TextBlock x:Name="nameTextBlock" Grid.Row="1" Grid.Column="1" Text="{Binding Name}"/>
                 <TextBlock x:Name="ageTextBlock" Grid.Row="2" Grid.Column="1" Text="{Binding Age}"/>
                 <TextBlock x:Name="scoreTextBlock" Grid.Row="3" Grid.Column="1" Text="{Binding Score}"/>
-                
+
             </Grid>
         </ListBox>
         <Label Content="Selected User" HorizontalAlignment="Left" Margin="60,75,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-
-
-
+        <StatusBar Grid.ColumnSpan="2" Margin="0,177,0,0" Grid.Row="1">
+            <Label x:Name="labelStatusBar" Content="..."/>
+        </StatusBar>
     </Grid>
 </Window>
